--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -21,4 +21,4 @@ jobs:
         - name: Build and Publish
           run: |
             docker build . --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-            docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }
+            docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
